<resources>
    <string name="app_name">LastVol Reminder</string>
    <string name="input_email">Input email</string>
    <string name="input_password">Input password</string>
    <string name="tv_login">Login</string>
    <string name="goto_register">Don\'t have account? register here.</string>
    <string name="tv_register">Register</string>
    <string name="input_username">Input username</string>
    <string name="confirm_password">Confirm password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="username">username</string>
    <string name="input_book_title">Input book title</string>
    <string name="edit">Edit</string>
    <string name="add">Add</string>
    <string name="title_place_holder">Ini title</string>
    <string name="desc_place_holder">00</string>
    <string name="delete">Delete</string>
    <string name="complete">complete</string>
    <string name="add_book">Add Book</string>
    <string name="input_last_volume">Input last volume</string>
    <string name="title_book">Title Book</string>
    <string name="floating_action_button">Floating Action Button</string>
</resources>