<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="@dimen/margin_width"
    android:layout_marginEnd="@dimen/margin_width"
    android:layout_marginTop="@dimen/margin_height"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_item"
    android:paddingBottom="@dimen/margin_inside">
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_inside"
        android:layout_marginStart="@dimen/margin_inside"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.65"
        android:textSize="@dimen/title_size"
        android:textColor="@color/black"
        android:text="@string/title_place_holder"/>

    <TextView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/tv_description"
        app:layout_constraintEnd_toStartOf="@id/btn_edit"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/margin_inside"
        android:layout_marginStart="@dimen/margin_inside"
        android:textSize="40sp"
        android:textColor="@color/black_desc"
        android:gravity="center"
        android:text="@string/desc_place_holder"/>

    <ImageView
        android:contentDescription="@string/edit"
        android:id="@+id/btn_edit"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_edit_new"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/margin_inside"
        android:layout_marginEnd="@dimen/margin_inside"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:paddingStart="2dp"
        android:paddingEnd="2dp"
        android:scaleType="fitCenter"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/bg_item"
        android:backgroundTint="@color/light_blue_main"/>

    <ImageView
        android:contentDescription="@string/delete"
        android:id="@+id/btn_delete"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_edit"
        android:layout_marginTop="@dimen/margin_inside"
        android:layout_marginEnd="@dimen/margin_inside"
        android:src="@drawable/ic_delete_new"
        android:paddingBottom="2dp"
        android:paddingStart="2dp"
        android:paddingEnd="2dp"
        android:paddingTop="2dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/bg_item"
        android:backgroundTint="@color/light_blue_main"/>

    <ImageView
        android:contentDescription="@string/complete"
        android:id="@+id/iv_complete"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintTop_toTopOf="@id/tv_description"
        app:layout_constraintBottom_toBottomOf="@id/tv_description"
        app:layout_constraintEnd_toStartOf="@id/tv_description"
        android:src="@drawable/ic_complete"
        android:visibility="invisible"
        />
</androidx.constraintlayout.widget.ConstraintLayout>