<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <TextView
        android:id="@+id/tv_login"
        android:textSize="48sp"
        android:layout_marginStart="@dimen/margin_width"
        android:text="@string/tv_login"
        android:layout_marginTop="@dimen/large_height_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_input_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login"
        android:layout_marginStart="@dimen/margin_width"
        android:layout_marginEnd="@dimen/margin_width"
        android:hint="@string/input_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_password"
        app:layout_constraintTop_toBottomOf="@id/et_input_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/margin_width"
        android:layout_marginEnd="@dimen/margin_width"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_width"
        android:layout_marginEnd="@dimen/margin_width"
        android:text="@string/tv_login"
        app:layout_constraintBottom_toTopOf="@id/tv_btn_goto_register"
        app:layout_constraintStart_toStartOf="parent"

        />

    <TextView
        android:id="@+id/tv_btn_goto_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/goto_register"
        android:gravity="center"
        android:clickable="true"
        android:layout_marginBottom="@dimen/large_height_margin"
        android:focusable="true"
        android:background="?android:attr/selectableItemBackground"/>

</androidx.constraintlayout.widget.ConstraintLayout>